tdf#93451: svtools: don't commit SvtMenuOptions too early

Surprisingly SvtMenuOptions_Impl::ImplCommit() does not actually write
m_eMenuIcons for "ShowIconsInMenues" but something read out of
Application::Settings(), which appears to be deliberate (i#95318).
Whatever sets that does it after SetMenuIconsState() is called,
so keep the SvtMenuOptions modified by not calling Commit().

(regression from 765f6211b1371c1e40de386e715de6b3d1a8df86)

Change-Id: I368b65589d16753d80a1b9e9cc7d7df59c0f53da
(cherry picked from commit ce0bba5fc1090caa7fb80f1bcc6ce64f67f11238)
Reviewed-on: https://gerrit.libreoffice.org/17865
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>